# AdeptSim

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
src/: alu.rs  disassembler.rs  lib.rs  main.rs  mem.rs  register_file.rs
src/riscv/: decoder.rs  isa.rs  labels.rs  mod.rs
