[package]
name = "adept_sim"
version = "0.1.0"
authors = ["Luís Fiolhais <lfiolhais@iobundle.com>", "Rafael Gonçalves <rgoncalves@iobundle.com>"]
build = "build.rs"

[dependencies]
adapt-mem-adept = { path = "adapt-mem-adept" }
clap = "2.31.2"

[build-dependencies]
git2 = "0.6"

[[bin]]
name = "adept_sim"
path = "src/main.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true

[[bin]]
name = "adept_disassembler"
path = "src/disassembler.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
